<resources>
    <string name="app_name">Jofrasa</string>
    <string name="action_settings">Settings</string>
    <string name="title_app">Jofrasa</string>
    <string name="add_to_car">Aniadir a carrito</string>
    <string name="unity">Unidades</string>
    <string name="pesos">Bs</string>
    <string name="logout">Cerrar sesion</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="revoke">Revocar</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="nit">NIT</string>
    <string name="address">Dirección</string>
    <string name="phone">Celular o Telefono</string>
    <string name="registry">Registar</string>
    <string name="outapp">Salir</string>
    <string name="add_purchase">Añadir</string>
    <string name="title_detail">Detalle de compra</string>
    <string name="units_products">Productos unitarios</string>
    <string name="button_purchase">Enviar Solicitud</string>
    <string name="connection">Revise su conexión</string>
    <string name="error">Error al cargar los datos</string>
<<<<<<< HEAD
    <string name="insert">insertado a carrito correctamente</string>
    <string name="Notinsert">No inserto correctamente</string>
    <string name="Subtotal">Subtotal:</string>
    <string name="transport">Transporte:</string>
    <string name="total">Total:</string>
    <string name="buy">Enviar Solicitud</string>
    <string name="delete">Elimina toda la lista</string>
=======
    <string name="error_registry">Error, email ya registrado!</string>
    <string name="success_registry">Datos almacenados correctamente</string>
>>>>>>> issue5_Registry
</resources>
